--- a/index.html
+++ b/index.html
@@ -61,22 +61,27 @@
 	<ul>
 		<li><a href="Website URL">First Name Last Name</a></li>
 		<li><a href="https://Robot-Responder.adrianyauri.repl.co">Adrian Yauri</a></li>
+		<li><a href="https://robot-responder.amandaworthy.repl.co/">Amanda Worthy</a></li>
 		<li><a href="https://Psychic-Bot.amywujcikowski.repl.co">Amy Wujcikowski</a></li>
 		<li><a href="https://pessimistic-robot.ashermodell.repl.co/">Asher Modell</a></li>
 		<li><a href="https://robot-responder.briannatahmisya.repl.co/">Brianna Tahmisyan</a></li>
 		<li><a href="https://robot-responder.celinaait.repl.co">celina ait-ouaret</a></li>
 		<li><a href="https://robot-responder.celinaait.repl.co">celina ait-ouaret</a></li>
 		<li><a href="https://replit.com/@ChrisberVasquez/Robot-Responder#script.js">chrisber Vasquez</a></li>
+		<li><a href="https://robot-responder.christophersoto.repl.co/">Christopher Soto</a></li>
 		<li><a href="https://bot.dsont.repl.co/">Daniel Souiket</a></li>
 		<li><a href="https://robot-responder.leongarcia1.repl.co">David Garcia </a></li>
 		<li><a href="https://questiner.demitricesalas.repl.co/">Demitrice Salas</a></li>
 		<li><a href="https://questiner.demitricesalas.repl.co/">Demitrice Salas</a></li>
 		<li><a href="https://questiner.demitricesalas.repl.co/">Demitrice Salas</a></li>
+		<li><a href="https://Robot-Responder.dianasotelo1.repl.co">Diana Sotelo-Zuta</a></li>
 		<li><a href="https://robot-responder.dvorahvelez.repl.co/">Dvorah Velez-jacobson</a></li>
+		<li><a href="https://robot-responder.dvorahvelez.repl.co/">Dvorah velez=jacobson</a></li>
 		<li><a href="https://Robot-Responder.dylanhuang15.repl.co">Dylan  Huang</a></li>
 		<li><a href="https://robot-response.emilianorojas1.repl.co/">Emi Rojas</a></li>
 		<li><a href="https://wisdom-response-robot.emilianorojas1.repl.co">Emi Rojas</a></li>
 		<li><a href="https://Robot-Responder.emilyporcel.repl.co">Emily Porcel</a></li>
+		<li><a href="https://Robot-Responder.emmaharvey.repl.co">Emma  Harvey </a></li>
 		<li><a href="https://Robot-Responder.erickchambilla.repl.co">Erick Chambilla</a></li>
 		<li><a href="https://robot.fabiolaloredo.repl.co/">fabiola loredo</a></li>
 		<li><a href="https://robot.fabiolaloredo.repl.co/">fabiola loredo</a></li>
@@ -85,16 +90,21 @@
 		<li><a href="https://robot-responder.jasmincontreras.repl.co/">Jasmin Contreras</a></li>
 		<li><a href="https://Robot-Responder.jasmincontreras.repl.co">Jasmin Contreras</a></li>
 		<li><a href="https://replit.com/@JavierMendoza8/Robot-Responder#style.css">Javier  Mendoza</a></li>
+		<li><a href="https://Robot-Responder.javongarnett.repl.co">Javon Garnett</a></li>
 		<li><a href="https://robot-responder.jesenia-aluzhca.repl.co/">Jesenia Uzhca</a></li>
 		<li><a href="https://Robot-Responder.jianamccall.repl.co">Jiana McCall</a></li>
 		<li><a href="https://robot-responder.jordanwarren.repl.co/">jordan warren</a></li>
 		<li><a href="https://robit-responder.jptehomilic.repl.co">JP Tehomilic</a></li>
+		<li><a href="https://robit-responder.jptehomilic.repl.co">Jp Tehomilic</a></li>
 		<li><a href="https://frogbot.juanandr3s.repl.co/">Juan Gomez</a></li>
+		<li><a href="https://robot-responder.juliabrojakowsk.repl.co/">Julia Brojakowski</a></li>
 		<li><a href="https://funny-responder.kalanisemple.repl.co/">kalani semple</a></li>
 		<li><a href="https://robot-responder.kanastasyaadi.repl.co/">Kanastasya Adi</a></li>
 		<li><a href="https://robot-responder.katierivera.repl.co/">Katie Rivera</a></li>
+		<li><a href="https://giganticdiscretelogic.katiehariprasha.repl.co">Katie Hariprashad</a></li>
 		<li><a href="https://monkey-robot.kazukirusso.repl.co/">Kazuki Russo</a></li>
 		<li><a href="https://Fortune-Cookie-Bot.kesangbhuming.repl.co">Kesang Bhuming</a></li>
+		<li><a href="https://Fortune-Cookie-Bot.kesangbhuming.repl.co">Kesang  Bhuming</a></li>
 		<li><a href="https://Fortune-Cookie-Bot.kesangbhuming.repl.co">Kesang  Bhuming</a></li>
 		<li><a href="https://Robot-Responder.kevinmendez6.repl.co">Kevin Mendez</a></li>
 		<li><a href="https://replit.com/@KevinMendez6/Robot-Responder#index.html">Kevin Mendez</a></li>
@@ -108,14 +118,18 @@
 		<li><a href="https://replit.com/@MatthewRodrig17/robot-responder#index.html">Matthew Rodriguez</a></li>
 		<li><a href="https://robot-responder.dionysiakourouk.repl.co/">Mei Kourouklis</a></li>
 		<li><a href="https://mate-bot.mikosalkin.repl.co/">Miko Salkin</a></li>
+		<li><a href="https://robot-responder-1062021.nathanmyo.repl.co/">Nathan Myo</a></li>
 		<li><a href="https://robot-responder.niklassantiago.repl.co/">niklas  santiago</a></li>
 		<li><a href="https://robot-responder.nyssaclarke.repl.co/">Nyssa Clarke</a></li>
 		<li><a href="https://Robot-responder.omarsaleh3.repl.co">Omar Saleh</a></li>
+		<li><a href="https://Robot-Responder.omarijefferson.repl.co">omari jefferson</a></li>
 		<li><a href="https://replit.com/@RobertModzelews/Robot-Responder#index.html">Robert  Modzelewski</a></li>
 		<li><a href="https://any-type-of-joke-bot.ronnyrojas.repl.co">Ronny Rojas</a></li>
 		<li><a href="https://robot-responder.sebastiantrzask.repl.co/">Sebastian Trzaska</a></li>
+		<li><a href="https://robot-responder.sebastianpagan.repl.co/">Sebastian  Pagan</a></li>
 		<li><a href="https://Robot-Responder.selenesanchez.repl.co">Selene Sanchez</a></li>
 		<li><a href="https://robot-responder.torisamuels.repl.co/">Tori Samuels</a></li>
+		<li><a href="https://robot-responders.yandelchitacapa.repl.co">Yandel Chitacapa</a></li>
 		<li><a href="https://robot-responders.yandelchitacapa.repl.co/">Yandel  Chitacapa </a></li>
 	</ul>
 </body>
